SOS-1990 Fix word wrap when the title is too long.

--- a/portlets/notifications-portlet/docroot/notifications/css/main.css
+++ b/portlets/notifications-portlet/docroot/notifications/css/main.css
@@ -147,7 +147,6 @@
 				color: #222;
 				overflow: hidden;
 				text-overflow: ellipsis;
-				white-space: nowrap;
 			}
 		}
 	}
